<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/llLeftLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnCodabar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/codabar" />

            <Button
                android:id="@+id/btnCode128"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/code_128" />

            <Button
                android:id="@+id/btnCode39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/code_39" />

            <Button
                android:id="@+id/btnCode93"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/code_93" />

            <Button
                android:id="@+id/btnMSI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/msi" />

            <Button
                android:id="@+id/btnD2of5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/d_2_of_5" />

            <Button
                android:id="@+id/btnUPC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/upc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnGS1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/gs1" />

            <Button
                android:id="@+id/btnI2of5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/i_2_of_5" />

            <Button
                android:id="@+id/btnDataMatrix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/datamatrix" />

            <Button
                android:id="@+id/btnGS12D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/gs1_2d_ext" />

            <Button
                android:id="@+id/btnMaxiCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/maxicode" />

            <Button
                android:id="@+id/btnPDF417"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/pdf_417" />

            <Button
                android:id="@+id/btnQRCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/qr_code" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnDisableBarcodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llContainer"
        android:layout_margin="15dp"
        android:text="@string/disable_all_barcodes" />

</RelativeLayout>