<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/data_matrix_settings_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/enabled"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/tbEnabledValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvEnabled"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textOff="OFF"
        android:textOn="ON" />

    <TextView
        android:id="@+id/tvInverseScanningMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEnabled"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/inverse_scanning"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/rgInverseScanningMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEnabled"
        android:layout_alignRight="@+id/tbEnabledValue"
        android:layout_below="@+id/tvInverseScanningMode"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbInverseScanningModeRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/inverse_scanning_mode_regular" />

        <RadioButton
            android:id="@+id/rbInverseScanningModeInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inverse_scanning_mode_inverse" />

        <RadioButton
            android:id="@+id/rbInverseScanningModeBoth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inverse_scanning_mode_both" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvMirrorDecoding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgInverseScanningMode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/mirror_decoding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/rgMirrorDecoding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMirrorDecoding"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbMirrorDecodingNever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/mirror_decoding_never" />

        <RadioButton
            android:id="@+id/rbMirrorDecodingAlways"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mirror_decoding_always" />

        <RadioButton
            android:id="@+id/rbMirrorDecodingAutodetect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mirror_decoding_autodetect" />
    </RadioGroup>

</RelativeLayout>