<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<include layout="@layout/device_index" />

    <TextView
        android:id="@+id/tvScanEngine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@layout/device_index"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/scan_engine"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/tbScanEngine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvScanEngine"
        android:layout_alignBottom="@+id/tvScanEngine"
        android:layout_alignLeft="@+id/btnStopScan"
        android:textOff="OFF"
        android:textOn="ON" />

    <Button
        android:id="@+id/btnStartScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvScanEngine"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/start_scan" />

    <Button
        android:id="@+id/btnStopScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStartScan"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:text="@string/stop_scan" />

    <TextView
        android:id="@+id/tvMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnScannerSettings"
        android:layout_below="@+id/btnStartScan"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:fadeScrollbars="false"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/btnScannerSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/scanner_settings" />

</RelativeLayout>